--- a/PacMan/PacMan.csproj
+++ b/PacMan/PacMan.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextureManager.cs" />
+    <Compile Include="Tile.cs" />
+    <Compile Include="MapLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
